Fixed alignment of header text for sm devices.

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -71,7 +71,6 @@ ul.bulleted li {
         display: block;
         font-size: 1.3em;
         font-weight: bold;
-        text-decoration: none;
     }
 }
 
@@ -185,5 +184,13 @@ ul.bulleted li {
                 padding-right: 0;
             }
         }
+    }
+}
+
+@media (min-width: @screen-sm-min) {
+
+    .contact-details {
+
+        text-align: right;
     }
 }
